# lbe-142x

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: lbe_common.h  lbe_device.h
src/: lbe_device_linux.c  lbe_device_windows.c  main.c
